--- a/Уроки/units/src/style.css
+++ b/Уроки/units/src/style.css
@@ -1,3 +1,14 @@
+label {
+   margin-left: 50px;
+}
+
+input {
+   width: 150px;
+   height: 50px;
+   font-size: 40px;
+   margin: 100px 0 100px 0;
+}
+
 .box {
   width: 150px;
   height: 150px;
