--- a/hW_6/src/css/style.sass
+++ b/hW_6/src/css/style.sass
@@ -55,9 +55,14 @@ body
     align-items: center
     justify-content: center
 .product 
+    width: 110px
+    height: 240px
     border: 1px solid #000
     margin-bottom: 5px
     background: pink
+    display: flex
+    flex-direction: column
+    align-items: center
     
 .buttons_block
     display: flex
@@ -91,6 +96,19 @@ body
     justify-content: space-between
 .change_quant
     margin-right: 30px
+.product_photo 
+    max-width: 90px
+    max-height: 90px
+img 
+    width: 100%
+    height: 100%
+.toBasket
+    margin: 7px  0  0 10px 
+.baskProduct
+    border: 1px solid #000
+    background-color: aqua
+    margin-bottom: 5px
+
 
     
 
